Corrections to the proposal

--- a/Proposal/references.bib
+++ b/Proposal/references.bib
@@ -168,7 +168,7 @@
 
 @techreport{FSharp,
   author = {Syme, Don},
-  title = {The F# 3.0 Language Specification},
+  title = {The F\# 3.0 Language Specification},
   institution = {Microsoft Research},
   year = {2012}
 }
@@ -202,4 +202,50 @@ publisher    = {Microsoft Research},
 title        = {F{\#}3.0 - Strongly-Typed Language Support for Internet-Scale Information Sources},
 url          = {http://research.microsoft.com/apps/pubs/default.aspx?id=173076},
 year         = {2012},
+institution  = {Microsoft Research}
 }
+
+@misc{RegularFSharp,
+  author = {Rodriguez, Ernesto},
+  title = {F\# - Regular gmap example},
+  howpublished = "\url{https://github.com/netogallo/FSharp-Generics/blob/master/Proposal/Proposal.fs}",
+  year = {2014}
+}
+
+@misc{Kwargs,
+  author = {Rodriguez, Ernesto},
+  title = {Kwargs - Generic command line arguments parsers},
+  howpublished = "\url{https://github.com/netogallo/Kwargs}",
+  year = {2014}
+}
+
+@misc{RegularDemo,
+  author = {Rodriguez, Ernesto},
+  title = {Regular - gmap},
+  howpublished = "\url{https://github.com/netogallo/FSharp-Generics/blob/master/Proposal/src/Main.hs}"
+}
+
+@misc{NoKinds,
+  title = {Add Higher Order Generics to F\# (Type Classes)},
+  howpublished = "\url{http://visualstudio.uservoice.com/forums/121579-visual-studio/suggestions/2228766-add-higher-order-generics-to-f-type-classes}",
+  notes = {Recovered on November 27th, 2014},
+  author = {Visual Studio Team}
+}
+  
+@inproceedings{Uniplate,
+ author = {Mitchell, Neil and Runciman, Colin},
+ title = {Uniform Boilerplate and List Processing},
+ booktitle = {Proceedings of the ACM SIGPLAN Workshop on Haskell Workshop},
+ series = {Haskell '07},
+ year = {2007},
+ isbn = {978-1-59593-674-5},
+ location = {Freiburg, Germany},
+ pages = {49--60},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1291201.1291208},
+ doi = {10.1145/1291201.1291208},
+ acmid = {1291208},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
