Info about Meta and Sum

--- a/WGP/references.bib
+++ b/WGP/references.bib
@@ -91,6 +91,11 @@
  keywords = {datatype-generic programming, haskell, type classes},
 }
 
+@misc{FsPickler,
+  title = "FsPickler",
+  howpublished = {\url{http://nessos.github.io/FsPickler/index.html}}
+}
+
 @inproceedings{RepLib,
  author = {Weirich, Stephanie},
  title = {RepLib: A Library for Derivable Type Classes},
